--- a/ExpenseReportCreation/Src/Welcome_Screen.fx.yaml
+++ b/ExpenseReportCreation/Src/Welcome_Screen.fx.yaml
@@ -89,7 +89,7 @@ Welcome_Screen As screen:
         FontWeight: =FontWeight.Bold
         Height: =108
         Size: =30
-        Text: ="Expense Report Application"
+        Text: ="Expense Report Application NEWWWWWWWWWW"
         Width: =560
         X: =37
         Y: =456
