--- a/ExpenseReportCreation/Src/AllExpenses_Screen.fx.yaml
+++ b/ExpenseReportCreation/Src/AllExpenses_Screen.fx.yaml
@@ -26,6 +26,7 @@ AllExpenses_Screen As screen:
         ZIndex: =1
 
         Lbl_EventTitle_AllExpense As label:
+            BorderColor: =RGBA(0, 0, 0, 1)
             Color: =RGBA(0, 46, 92, 1)
             DisabledColor: =RGBA(161, 159, 157, 1)
             Font: =Font.'Segoe UI'
@@ -45,6 +46,7 @@ AllExpenses_Screen As screen:
             ZIndex: =1
 
         Lbl_StartEndDate_AllExpense As label:
+            BorderColor: =RGBA(0, 0, 0, 1)
             Color: =RGBA(0, 46, 92, 1)
             DisabledColor: =RGBA(161, 159, 157, 1)
             Font: =Font.'Segoe UI'
@@ -55,6 +57,7 @@ AllExpenses_Screen As screen:
             PaddingLeft: =12
             PaddingRight: =0
             PaddingTop: =0
+            Size: =12
             Text: |-
                 ="Start: " & Text(ThisItem.'Start Date', DateTimeFormat.ShortDate) & " - End: " & Text(ThisItem.'End Date', DateTimeFormat.ShortDate)
             VerticalAlign: =VerticalAlign.Top
@@ -92,6 +95,7 @@ AllExpenses_Screen As screen:
 
         Separator2 As rectangle:
             BorderColor: =RGBA(0, 0, 0, 0)
+            Fill: =RGBA(255, 255, 255, 1)
             Height: =8
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
